# multimedia_av_codec

./: .gitattributes  .gitignore  OAT.xml  README_zh.md  bundle.json  cfi_blocklist.txt  config.gni  hisysevent.yaml
interfaces/inner_api/native/: BUILD.gn  audio_base_codec_ext.h  audio_capture_filter.h  audio_data_source_filter.h  audio_decoder_filter.h  audio_encoder_filter.h  audio_sink.h  audio_sink_filter.h  av_common.h  avcodec_audio_codec.h  avcodec_audio_common.h  avcodec_audio_decoder.h  avcodec_audio_encoder.h  avcodec_codec_name.h  avcodec_common.h  avcodec_errors.h  avcodec_info.h  avcodec_list.h  avcodec_mime_type.h  avcodec_video_decoder.h  avcodec_video_encoder.h  avdemuxer.h  avmuxer.h  avsource.h  codec_capability_adapter.h  decoder_surface_filter.h  demuxer_filter.h  dragging_player.h  media_demuxer.h  media_description.h  media_sync_manager.h  metadata_filter.h  muxer_filter.h  subtitle_sink.h  subtitle_sink_filter.h  surface_decoder_filter.h  surface_encoder_filter.h  video_capture_filter.h  video_decoder_adapter.h  video_resize_filter.h  (+1 more)
services/dfx/: BUILD.gn  avcodec_dump_utils.cpp  avcodec_sysevent.cpp  avcodec_trace.cpp  avcodec_xcollie.cpp
services/dfx/include/: avcodec_dump_utils.h  avcodec_log.h  avcodec_sysevent.h  avcodec_trace.h
services/engine/base/: BUILD.gn  codecbase.cpp
services/engine/codeclist/: BUILD.gn  audio_codeclist_info.cpp  audio_codeclist_info.h  codec_ability_singleton.cpp  codec_ability_singleton.h  codeclist_builder.cpp  codeclist_builder.h  codeclist_core.cpp  codeclist_core.h  codeclist_utils.h
services/engine/plugin/: BUILD.gn
services/media_engine/filters/: BUILD.gn  audio_capture_filter.cpp  audio_data_source_filter.cpp  audio_decoder_filter.cpp  audio_encoder_filter.cpp  audio_sink_filter.cpp  codec_capability_adapter.cpp  decoder_surface_filter.cpp  demuxer_filter.cpp  metadata_filter.cpp  muxer_filter.cpp  subtitle_sink_filter.cpp  surface_decoder_adapter.cpp  surface_decoder_adapter.h  surface_decoder_filter.cpp  surface_encoder_adapter.cpp  surface_encoder_adapter.h  surface_encoder_filter.cpp  video_capture_filter.cpp  video_decoder_adapter.cpp  video_resize_filter.cpp
services/media_engine/modules/: BUILD.gn
services/media_engine/plugins/: BUILD.gn
services/services/: BUILD.gn
services/services/common/: avsharedmemory_ipc.cpp  avsharedmemory_ipc.h
services/services/factory/: i_demuxer_engine.h  i_muxer_engine.h  i_source_engine.h
services/utils/: BUILD.gn  task_thread.cpp
services/utils/include/: block_queue.h
test/: BUILD.gn
test/fuzztest/audiodecoder_fuzzer/: BUILD.gn  audio_decoder_demo.cpp  audio_decoder_demo.h  audiodecoder_fuzzer.cpp
test/fuzztest/audiodecoderconfigure_fuzzer/: BUILD.gn  audiodecoderConfigure_fuzzer.cpp
test/fuzztest/audiodecoderflush_fuzzer/: BUILD.gn  audio_decoder_flush_demo.cpp  audio_decoder_flush_demo.h  audio_decoder_flush_fuzzer.cpp
test/fuzztest/audiodecoderpreapi_fuzzer/: BUILD.gn  audiodecoderdemo.cpp  audiodecoderdemo.h  audiodecoderpreapi_fuzzer.cpp
test/fuzztest/audiodecoderreset_fuzzer/: BUILD.gn  audio_decoder_reset_demo.cpp  audio_decoder_reset_demo.h  audio_decoder_reset_fuzzer.cpp
test/fuzztest/audiodecodersetparameter_fuzzer/: BUILD.gn  audiodecoderSetParameter_fuzzer.cpp
test/fuzztest/audioencoder_fuzzer/: BUILD.gn  audio_encoder_demo.cpp  audio_encoder_demo.h  audioencoder_fuzzer.cpp
test/fuzztest/audioencoderflush_fuzzer/: BUILD.gn  audio_encoder_flush_demo.cpp  audio_encoder_flush_demo.h  audio_encoder_flush_fuzzer.cpp
test/fuzztest/audioencoderpreapi_fuzzer/: BUILD.gn  audioencoderdemo.cpp  audioencoderdemo.h  audioencoderpreapi_fuzzer.cpp
test/fuzztest/audioencoderreset_fuzzer/: BUILD.gn  audio_encoder_reset_demo.cpp  audio_encoder_reset_demo.h  audio_encoder_reset_fuzzer.cpp
test/fuzztest/avcencinfo_fuzzer/: BUILD.gn  avcencinfo_fuzzer.cpp
test/fuzztest/demuxer_fuzzer/: BUILD.gn  demuxer_fuzzer.cpp
test/fuzztest/drmdecryptor_fuzzer/: BUILD.gn  drmdecryptor_fuzzer.cpp
test/fuzztest/encoderConfigure_fuzzer/: BUILD.gn  encoderConfigure_fuzzer.cpp
test/fuzztest/encoderSetParameter_fuzzer/: BUILD.gn  encoderSetParameter_fuzzer.cpp
test/fuzztest/encoderapi11_fuzzer/: BUILD.gn  encoderapi11_fuzzer.cpp  videoenc_api11_sample.cpp  videoenc_api11_sample.h
test/fuzztest/encoderconfigure_fuzzer/: BUILD.gn  encoderconfigure_fuzzer.cpp  videoenc_sample.cpp  videoenc_sample.h
test/fuzztest/encodersetparameter_fuzzer/: BUILD.gn  encodersetparameter_fuzzer.cpp
test/fuzztest/hwdecoder_fuzzer/: BUILD.gn  hwdecoder_fuzzer.cpp  videodec_sample.cpp  videodec_sample.h
test/fuzztest/hwdecoderapi11_fuzzer/: BUILD.gn  hwdecoderapi11_fuzzer.cpp  project.xml  videodec_api11_sample.cpp  videodec_api11_sample.h
test/fuzztest/swdecoderConfigure_fuzzer/: BUILD.gn  swdecoderConfigure_fuzzer.cpp
test/fuzztest/swdecoderResource_fuzzer/: BUILD.gn  swdecoderResource_fuzzer.cpp
test/fuzztest/swdecoderSetParameter_fuzzer/: BUILD.gn  swdecoderSetParameter_fuzzer.cpp
test/fuzztest/swdecoderconfigure_fuzzer/: BUILD.gn  swdecoderconfigure_fuzzer.cpp  videodec_sample.cpp  videodec_sample.h
test/fuzztest/swdecoderresource_fuzzer/: BUILD.gn  swdecoderresource_fuzzer.cpp
test/fuzztest/swdecodersetparameter_fuzzer/: BUILD.gn  swdecodersetparameter_fuzzer.cpp
test/moduletest/audio_decoder/: BUILD.gn
test/moduletest/audio_encoder/: BUILD.gn
test/moduletest/capability/: BUILD.gn
test/moduletest/demuxer/: BUILD.gn
test/moduletest/muxer/: BUILD.gn  Test.json
test/moduletest/resources/: ohos_test.xml
test/nativedemo/: BUILD.gn  av_codec_demo.cpp
test/nativedemo/audio_demo/: avcodec_audio_aac_encoder_demo.cpp  avcodec_audio_avbuffer_aac_encoder_demo.cpp  avcodec_audio_avbuffer_aac_encoder_demo.h  avcodec_audio_avbuffer_amrnb_encoder_demo.cpp  avcodec_audio_avbuffer_amrnb_encoder_demo.h  avcodec_audio_avbuffer_amrwb_encoder_demo.cpp  avcodec_audio_avbuffer_amrwb_encoder_demo.h  avcodec_audio_avbuffer_decoder_demo.cpp  avcodec_audio_avbuffer_decoder_demo.h  avcodec_audio_avbuffer_decoder_inner_demo.cpp  avcodec_audio_decoder_demo.cpp  (+21 more)
(+1115 files in other folders)
