# Copyright (C) 2023-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

declare_args() {
  av_codec_support_capi = true
  av_codec_support_codec = true
  av_codec_client_support_codec = true
  av_codec_support_codeclist = true
  av_codec_support_hcodec = true
  av_codec_support_demuxer = true
  av_codec_support_source = true
  av_codec_support_muxer = true
  av_codec_support_test = true
  av_codec_support_xcollie = true
  av_codec_support_bitstream_dump = true
  av_codec_support_drm = false
  av_codec_enable_special_codec = false
  av_codec_support_video_processing_engine = false
  if (defined(global_parts_info) &&
      defined(global_parts_info.multimedia_video_processing_engine)) {
    av_codec_support_video_processing_engine = true
  }
  av_codec_support_hidumper = false
}
av_codec_sanitize = {
  boundary_sanitize = true
  cfi = true
  cfi_cross_dso = true
  integer_overflow = true
  ubsan = true
  debug = false
}
av_codec_test_sanitize = {
  debug = false
}
av_codec_root_dir = "//foundation/multimedia/av_codec"
media_foundation_root_dir = "//foundation/multimedia/media_foundation"
audio_framework_root_dir = "//foundation/multimedia/audio_framework"
graphic_2d_root_dir = "//foundation/graphic/graphic_2d"
graphic_suface_root_dir = "//foundation/graphic/graphic_surface"
c_utils_root_dir = "//commonlibrary/c_utils"
drm_framework_root_dir = "//foundation/multimedia/drm_framework"
video_processing_engine_root_dir =
    "//foundation/multimedia/video_processing_engine"

av_codec_defines = [
  "HST_ANY_WITH_NO_RTTI",
  "MEDIA_OHOS",
]

if (av_codec_support_capi) {
  av_codec_defines += [ "SUPPORT_CAPI" ]
} else {
  av_codec_defines += [ "UNSUPPORT_CAPI" ]
}

if (av_codec_support_codec) {
  av_codec_defines += [ "SUPPORT_CODEC" ]
} else {
  av_codec_defines += [ "UNSUPPORT_CODEC" ]
}

if (av_codec_support_codeclist) {
  av_codec_defines += [ "SUPPORT_CODECLIST" ]
} else {
  av_codec_defines += [ "UNSUPPORT_CODECLIST" ]
}

if (av_codec_support_hcodec) {
  av_codec_defines += [ "SUPPORT_HCODEC" ]
} else {
  av_codec_defines += [ "UNSUPPORT_HCODEC" ]
}

if (av_codec_support_demuxer) {
  av_codec_defines += [ "SUPPORT_DEMUXER" ]
} else {
  av_codec_defines += [ "UNSUPPORT_DEMUXER" ]
}

if (av_codec_support_muxer) {
  av_codec_defines += [ "SUPPORT_MUXER" ]
} else {
  av_codec_defines += [ "UNSUPPORT_MUXER" ]
}

if (av_codec_support_source) {
  av_codec_defines += [ "SUPPORT_SOURCE" ]
} else {
  av_codec_defines += [ "UNSUPPORT_SOURCE" ]
}

if (av_codec_support_xcollie) {
  av_codec_defines += [ "HICOLLIE_ENABLE" ]
}

if (av_codec_support_bitstream_dump) {
  av_codec_defines += [ "BITSTREAM_DUMP_ENABLE" ]
}

if (defined(global_parts_info) &&
    defined(global_parts_info.multimedia_drm_framework)) {
  av_codec_support_drm = true
}

if (av_codec_support_drm) {
  av_codec_defines += [ "SUPPORT_DRM" ]
} else {
  av_codec_defines += [ "UNSUPPORT_DRM" ]
}

av_codec_support_hidumper = false
if (defined(global_parts_info) &&
    defined(global_parts_info.hiviewdfx_hidumper)) {
  av_codec_support_hidumper = true
}

if (av_codec_support_hidumper) {
  av_codec_defines += [ "SUPPORT_HIDUMPER" ]
}
